<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateProductActivity">

    <ProgressBar
        android:id="@+id/product_post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/create_product_title_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_product_imageView"
        app:layout_constraintVertical_bias="0.214" />

    <ImageView
        android:id="@+id/create_product_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:padding="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <ImageView
        android:id="@+id/postProductImageButton"
        android:layout_width="81dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/create_product_imageView"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/create_product_imageView"
        app:layout_constraintEnd_toEndOf="@+id/create_product_imageView"
        app:layout_constraintStart_toStartOf="@+id/create_product_imageView"
        app:layout_constraintTop_toTopOf="@+id/create_product_imageView"
        app:layout_constraintVertical_bias="0.537"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/create_product_title_et"
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_product_imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/create_product_price_et"
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/product_price"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_product_title_et"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/create_product_id_et"
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/product_id"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/post_save_product_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_product_price_et"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storee"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/create_product_store_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_product_imageView"
        app:layout_constraintVertical_bias="0.951" />

    <Spinner
        android:id="@+id/create_product_store_spinner"
        android:layout_width="394dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/create_product_title_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_product_imageView"
        app:layout_constraintVertical_bias="0.818" />

    <Button
        android:id="@+id/post_save_product_button"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:text="@string/create"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/create_product_price_et"
        app:layout_constraintVertical_bias="0.835" />

</androidx.constraintlayout.widget.ConstraintLayout>